<resources>
    <string name="app_name">Saloon</string>
    <string name="splash_word">be pampered..</string>
    <string name="number_hint">mobile number</string>
    <string name="otp_hint">Enter OTP</string>
    <string name="submit_btn">Confirm</string>
    <string name="submit_resend_otp">Resend OTP</string>
    <string name="about_us">Awesome Pick For You</string>
    <string name="bottom_now">Book Now</string>
    <string name="bottom_later">Book Later</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_history">History</string>
    <string name="txt_talk_to_us">Talk to us</string>
    <string name="txt_faqs">FAQs</string>
    <string name="txt_spendgenie">Spendgenie</string>
    <string name="txt_preferences">Preferences</string>
    <string name="txt_profile_btm_text">Privacy is Priority</string>
    <!-- profile string -->
    <string name="txt_name">Full Name</string>
    <string name="txt_bday">Birthday</string>
    <string name="txt_anniversary">Anniversary</string>
    <string name="txt_partener_bday">Partner Birthday</string>
    <string name="txt_papa_bday">Papa Birthday</string>
    <string name="txt_mumma_bday">Mumma Birthday</string>
    <!-- alert string -->
    <string name="txt_ok">Ok</string>
    <string name="txt_cancel">Cancel</string>
    <!-- alert calender -->
    <string name="txt_calender_hint">Hmm... Let\'s pick a date</string>
    <string name="txt_calender_set">Set</string>
    <string name="txt_calender_cancel">Cancel</string>
    <!-- alert error activity -->
    <string name="btn_go_home">Let\'s go home</string>
    <string name="txt_go_home">Oh my Gosh... we are so thrilled yet embarrassed that you expected us here too... Hmm we will come here soon... But until then..</string>
</resources>
