<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NumberActivity">


    <LinearLayout
        android:id="@+id/number-activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="70dp"
        android:background="@drawable/splash_screen_background"
        android:orientation="vertical">

        <TextView
            android:visibility="invisible"
            android:id="@+id/welcome_text"
            android:text="@string/splash_word"
            android:layout_marginBottom="50dp"
            android:textFontWeight="400"
            android:fontFamily="@font/rockness"
            android:textSize="65sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/enter_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_hint"
            android:inputType="number"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="25sp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/submit_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:paddingRight="50dp"
            android:paddingLeft="50dp"
            android:layout_below="@+id/enter_number"
            android:gravity="center"
            android:layout_margin="30dp"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/graident_button_background"
            android:text="@string/submit_btn" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>