<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_category_bg"
    android:orientation="vertical"
    tools:context=".user.ProfileActivity">

    <LinearLayout
        android:id="@+id/profile_top_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:padding="4dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/logout_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight=".1"
            android:src="@drawable/ic_power_settings" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_image_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_top_bar"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="40dp"
        android:weightSum="1">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/update_profile_image"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center|center_horizontal"
            android:src="@drawable/demo_profile_image"
            app:civ_border_width="0dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_holder_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image_holder"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/btn_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/txt_profile"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_16sp" />

        <TextView
            android:id="@+id/btn_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/txt_history"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_holder_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/content_holder_1"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/btn_talk_to_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/txt_talk_to_us"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_16sp" />

        <TextView
            android:id="@+id/btn_faqs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/txt_faqs"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_holder_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/content_holder_2"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/btn_spendgenie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/txt_spendgenie"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_16sp" />

        <TextView
            android:id="@+id/btn_preference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/txt_preferences"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_holder_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/save_btn_container"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/profile_btm_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/rockness"
            android:text="@string/txt_profile_btm_text"
            android:textAlignment="center"
            android:textFontWeight="400"
            android:textSize="50sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/save_btn_container"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:padding="2dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/back_to_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/home_btn_icon" />
    </LinearLayout>

</RelativeLayout>