<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="#43000000"
    android:padding="10dp"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp">

            <TextView
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/txt_calender_hint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="25dp"
            android:paddingRight="5dp"
            android:paddingBottom="20dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadingEdge="vertical"
                android:paddingRight="20dp"
                android:scrollbars="vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="30dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_timer_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadingEdge="vertical"
                android:paddingRight="20dp"
                android:scrollbars="vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <RelativeLayout
                android:id="@+id/set_cancel_lay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/bottom_btn_background"
                android:padding="22dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/txt_calender_cancel"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/set_date_lay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft=".5dp"
                android:layout_weight="1"
                android:background="@color/bottom_btn_background"
                android:padding="22dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/txt_calender_set"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>