<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_category_bg"
    android:orientation="vertical"
    tools:context=".user.UpdateProfileActivity">

    <include layout="@layout/common_header" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/name_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_container"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:padding="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:theme="@style/TextInputLayoutAppearance">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/montserrat_bold"
                        android:hint="@string/txt_name"
                        android:imeOptions="actionNext"
                        android:inputType="textAutoComplete|text"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bday_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_lay"
                android:orientation="vertical"
                android:padding="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:theme="@style/TextInputLayoutAppearance">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/montserrat_bold"
                        android:hint="@string/txt_bday"
                        android:imeOptions="actionNext"
                        android:inputType="date"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/annivsry_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bday_lay"
                android:orientation="vertical"
                android:padding="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:theme="@style/TextInputLayoutAppearance">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_anniversary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/montserrat_bold"
                        android:hint="@string/txt_anniversary"
                        android:imeOptions="actionNext"
                        android:inputType="date"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/partner_bday_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/annivsry_lay"
                android:orientation="vertical"
                android:padding="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:theme="@style/TextInputLayoutAppearance">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_partner_bday"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/montserrat_bold"
                        android:hint="@string/txt_partener_bday"
                        android:imeOptions="actionNext"
                        android:inputType="date"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/papa_bday_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/partner_bday_lay"
                android:orientation="vertical"
                android:padding="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:theme="@style/TextInputLayoutAppearance">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_papa_bday"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/montserrat_bold"
                        android:hint="@string/txt_papa_bday"
                        android:imeOptions="actionNext"
                        android:inputType="date"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mumma_bday_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/papa_bday_lay"
                android:orientation="vertical"
                android:padding="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:theme="@style/TextInputLayoutAppearance">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_mumma_bday"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/montserrat_bold"
                        android:hint="@string/txt_mumma_bday"
                        android:imeOptions="actionNext"
                        android:inputType="date"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:padding="2dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/save_profile_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/home_btn_icon" />
    </LinearLayout>

</RelativeLayout>